--- a/templates/products.html
+++ b/templates/products.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Product</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Add Product{% endblock %}
+
+{% block content %}
     <h1>Add Product</h1>
-    <form action="/add_product" method="POST">
+    <form class="product-form" action="/add_product" method="POST">
         <label for="name">Product Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
-        
+        <input type="text" id="name" name="name" placeholder="Product Name" required><br><br>
+
         <label for="price">Product Price:</label><br>
-        <input type="number" step="0.01" id="price" name="price" required><br><br>
-        
-        <button type="submit">Add Product</button>
+        <input type="number" step="1" id="price" name="price" placeholder="Price" required><br><br>
+
+        <button class="add-product" type="submit">Add Product</button>
+        <br>
+        <br>
+        <button class="logout-button"><a href="/admin/logout">Logout</a></button>
     </form>
-</body>
-</html>
+    
+{% endblock %}
