--- a/templates/products.html
+++ b/templates/products.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <h1>Add Product</h1>
+    <!-- Enctype for images upload -->
     <form class="product-form" action="/add_product" method="POST" enctype="multipart/form-data">
         <label for="name">Product Name:</label><br>
         <input type="text" id="name" name="name" placeholder="Product Name" required><br><br>
