--- a/templates/home.html
+++ b/templates/home.html
@@ -8,14 +8,14 @@
     <!-- Display list of products -->
     <ul class="products">
         {% for product in products %}
-        <li>
+        <li class="product-item">
             <h3>{{ product.name }} - KES: {{ product.price }}</h3>
             {% if product.image_filename %}
-                <img src="{{ url_for('static', filename='uploads/' + product.image_filename) }}" alt="Image of {{ product.name }}" style="width: 150px;height: 150px;">
+                <img src="{{ url_for('static', filename='uploads/' + product.image_filename) }}" alt="Image of {{ product.name }}" class="product-image">
             {% endif %}
             <p>{{ product.description }}</p>
             <!-- Link to view the QR code for each product -->
-            <img src="{{ url_for('generate_qr', product_id=product.id) }}" alt="QR Code for {{ product.name }}" style="width:150px;height:150px;">
+            <img src="{{ url_for('generate_qr', product_id=product.id) }}" alt="QR Code for {{ product.name }}" class="product-qr">
         </li>
         {% endfor %}
     </ul>
