--- a/templates/home.html
+++ b/templates/home.html
@@ -18,19 +18,60 @@
                 <br>
                 <br>
                 <span class="short-description">{{ product.description[:100] }}...</span>
-                <br>
-                <br>
+                
                 <span class="full-description" style="display:none;">{{ product.description }}</span>
                 <a href="#" class="read-more" onclick="toggleDescription(event, this)">Read More</a>
-                <br>
-                <br>
+                
                 <a href="#" class="show-less" style="display:none;" onclick="toggleDescription(event, this)">Show Less</a>
             </p>
             <!-- Link to view the QR code for each product -->
             <img src="{{ url_for('generate_qr', product_id=product.id) }}" alt="QR Code for {{ product.name }}" class="product-qr">
+
+            <!-- Admin options to edit and delete product -->
+            {% if current_user %}
+                <button class="btn btn-primary" onclick="openEditModal({{ product.id }}, '{{ product.name }}', {{ product.price }}, '{{ product.description }}')">Edit</button>
+                <button class="btn btn-danger" onclick="openDeleteModal({{ product.id }}, '{{ product.name }}')">Delete</button>
+            {% endif %}
         </li>
         {% endfor %}
     </ul>
+
+    <!-- Edit Product Modal -->
+    <div id="editModal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <span class="close" onclick="closeEditModal()">&times;</span>
+            <h2>Edit Product</h2>
+            <form id="editProductForm" action="/edit_product" method="POST" enctype="multipart/form-data">
+                <input type="hidden" name="product_id" id="editProductId">
+                <label for="editName">Product Name:</label><br>
+                <input type="text" id="editName" name="name" required><br><br>
+
+                <label for="editPrice">Product Price:</label><br>
+                <input type="number" step="0.01" id="editPrice" name="price" required><br>
+
+                <label for="editDescription">Product Description:</label><br>
+                <textarea name="description" id="editDescription" required></textarea><br>
+
+                <label for="editImage">Product Image:</label><br>
+                <input type="file" name="image" id="editImage" accept="image/*"><br><br>
+
+                <button type="submit">Update Product</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Delete Product Modal -->
+    <div id="deleteModal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <span class="close" onclick="closeDeleteModal()">&times;</span>
+            <h2>Delete Product</h2>
+            <p>Are you sure you want to delete <span id="deleteProductName"></span>?</p>
+            <form id="deleteProductForm" action="/delete_product" method="POST">
+                <input type="hidden" name="product_id" id="deleteProductId">
+                <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+        </div>
+    </div>
 
     <!-- Inline Script for QR Code Scanning -->
     <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
@@ -84,6 +125,32 @@
                 readMore.style.display = 'inline';
                 showLess.style.display = 'none';
             }
+        }
+
+        // Function to open the edit modal
+        function openEditModal(id, name, price, description) {
+            document.getElementById('editProductId').value = id;
+            document.getElementById('editName').value = name;
+            document.getElementById('editPrice').value = price;
+            document.getElementById('editDescription').value = description;
+            document.getElementById('editModal').style.display = "block";
+        }
+
+        // Function to close the edit modal
+        function closeEditModal() {
+            document.getElementById('editModal').style.display = "none";
+        }
+
+        // Function to open the delete modal
+        function openDeleteModal(id, name) {
+            document.getElementById('deleteProductId').value = id;
+            document.getElementById('deleteProductName').innerText = name;
+            document.getElementById('deleteModal').style.display = "block";
+        }
+
+        // Function to close the delete modal
+        function closeDeleteModal() {
+            document.getElementById('deleteModal').style.display = "none";
         }
     </script>
 {% endblock %}
