--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,7 +5,6 @@
   margin: 0;
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: center; */
 }
 
 .product-item {
@@ -36,10 +35,10 @@
 .product-item h3 {
   margin-bottom: 10px;
   text-align: center;
+  font-size: 20px !important;
 }
 
 .product-item p {
-  font-size: 14px;
   color: hsl(0, 0%, 33%);
   text-align: center;
 }
