--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,18 +5,21 @@
   margin: 0;
   display: flex;
   flex-wrap: wrap;
+  gap: 20px;
 }
 
 .product-item {
   display: flex;
+  flex: 1 1 calc(33.333% - 20px);
   flex-direction: column;
   width: 100%;
   max-width: 300px;
+  min-height: 400px;
   margin: 10px;
   padding: 20px;
   border: 1px solid hsl(0, 0%, 87%);
   border-radius: 5px;
-  box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
+  box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.7);
   box-sizing: border-box;
   align-items: center;
 }
@@ -29,7 +32,7 @@
 }
 
 .product-qr {
-  margin-top: 10px;
+  margin-top: auto;
 }
 
 .product-item h3 {
@@ -41,4 +44,10 @@
 .product-item p {
   color: hsl(0, 0%, 33%);
   text-align: center;
+}
+
+.admin-actions {
+  width: 60%;
+  display: flex;
+  margin-top: auto;
 }
